# khalas

./: .gitignore  README.md  TEST_ACCOUNTS.md  scratch.js  signing.keystore  temp.py  update_qr_translations.py  update_translations.py
backend/: .env.example  README.md  pyproject.toml  railway.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  appointments.py  auth.py  dossier.py  health.py  provider.py  public.py  qr.py  salesman.py  search.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/db/: mongodb.py  utils.py
backend/app/models/: __init__.py  collections.py
backend/app/repositories/: __init__.py  appointments.py  availability.py  dossier.py  services.py  staff.py  users.py  venues.py
backend/app/schemas/: __init__.py  appointment.py  auth.py  availability.py  common.py  dossier.py  health.py  service.py  staff.py  user.py  venue.py
backend/app/services/: __init__.py  appointments.py  auth.py  notifications.py  scheduling.py  serializers.py
backend/scripts/: check_users.py  make_admin.py  seed_demo_user.py  seed_prod.py  seed_users.py
frontend/: .env.example  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/messages/: ar.json  en.json
frontend/public/: manifest.json  sw.js
frontend/public/.well-known/: assetlinks.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: appointment-qr-code.tsx  booking-panel.tsx  forgot-password-form.tsx  health-status.tsx  (+14 more)
(+36 files in other folders)
