[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khalas-backend"
version = "0.1.0"
description = "FastAPI backend for Khalas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "motor>=3.5,<4.0",
  "PyJWT>=2.9,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "dnspython>=2.0,<3.0",
  "slowapi>=0.1.9,<1.0",
  "limits>=3.0,<4.0",
  "resend>=2.0,<3.0",
  "httpx>=0.27,<1.0",
  "email-validator>=2.0,<3.0",
  "passlib[bcrypt]>=1.7.4,<2.0",
  "bcrypt>=4.0,<6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
